<resources>
    <string name="app_name">SOSSPApp</string>
    <string name="sign_in_google">Entrar com o Google</string>
    <string name="sign_in_facebook">Entrar com o Facebook</string>
    <string name="sign_in_email">Entrar com E-mail</string>
    <string name="sign_up_new_user">É novo aqui?</string>
    <string name="create_an_account">Criar uma conta</string>
    <string name="input_email">E-mail</string>
    <string name="input_password">Senha</string>
    <string name="input_password_again">Digite a senha novamente</string>
    <string name="sign_up_google">Cadastre-se com o Google</string>
    <string name="sign_up_facebook">Cadastre-se com o Facebook</string>
    <string name="sign_up_email">Cadastre-se com um E-mail</string>
    <string name="btn_next">Seguinte</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_back">Voltar</string>
    <string name="input_name">Nome</string>
    <string name="input_lastname">Sobrenome</string>
    <string name="input_user_tag">Apelido de usuário</string>
    <string name="input_cpf">CPF</string>
    <string name="input_date_of_birth">Data de nascimento</string>
    <string name="input_genre">Gênero</string>
    <string name="input_contact_tel">Telefone de contato</string>
    <string name="finish_register">Cadastrar</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_occurrence">Efetuar denúncia</string>
    <string name="menu_contacts_emergency">Contatos de emergência</string>
    <string name="menu_statistics">Estatísticas</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_help">Ajuda</string>
    <string name="menu_feedback">Feedback</string>

    <string name="title_activity_maps">Map</string>

    <string name="title_activity_profile_user">Perfil</string>
    <string name="input_tag">Tag</string>
    <string name="text_addresses">Endereços</string>
    <string name="text_new_address">Novo</string>
    <string name="text_occurrences">Suas ocorrências</string>

    <string name="title_activity_user_address">Endereço</string>

    <string name="title_activity_user_occurrence">Ocorrência</string>
    <string name="input_status_occurrence">Status</string>

    <string name="title_activity_new_occurrence">Nova Ocorrência</string>
    <string name="input_type_occurrence">Tipo</string>
    <string name="input_date_occurrence">Data da ocorrência</string>
    <string name="input_current_date">Data atual</string>
    <string name="input_address_occurrence">Endereço</string>

    <string name="title_activity_contacts_emergency">Contatos de emergência</string>

    <string name="title_activity_settings">Configurações</string>
    <string name="btn_sign_out">Sair</string>

    <string name="title_activity_new_address">Novo endereço</string>
    <string name="input_zipcode">CEP</string>
    <string name="input_address_name">Logradouro</string>
    <string name="input_neighborhood">Bairro</string>
    <string name="input_city">Cidade</string>
    <string name="input_state">Estado</string>
    <string name="input_number_address">Número</string>
    <string name="input_complement">Complemento</string>

    <string name="title_activity_list_occurrences">Suas ocorrências</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
