<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_occurrence"
            android:title="@string/menu_occurrence" />
        <item
            android:id="@+id/nav_contacts"
            android:title="@string/menu_contacts_emergency" />
    </group>

    <group android:id="@+id/group_menu" >
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/menu_feedback" />
    </group>

</menu>
